购物劵分享中和已赠送状态增加

--- a/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/cell/CouponViewCell.xib
+++ b/TGWSCAPP /TGWSCAPP/ViewControllers/Tab_4/Funct/cell/CouponViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -22,15 +22,14 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tab_4-19" translatesAutoresizingMaskIntoConstraints="NO" id="eZx-TT-fxw">
                         <rect key="frame" x="6.5" y="8" width="362" height="122"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="362" id="Rf6-A0-jnP"/>
-                            <constraint firstAttribute="height" constant="122" id="ZS4-yQ-Y8W"/>
+                            <constraint firstAttribute="height" constant="122" id="z1t-FV-8A0"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mHw-rn-ZqY">
                         <rect key="frame" x="6" y="40" width="124" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="EIg-pd-cUn"/>
-                            <constraint firstAttribute="width" constant="124" id="joI-n7-vBp"/>
+                            <constraint firstAttribute="width" constant="124" id="VlR-WM-FsJ"/>
+                            <constraint firstAttribute="height" constant="40" id="xCh-YN-Rhh"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="40"/>
                         <color key="textColor" red="0.43921568630000002" green="0.2901960784" blue="0.094117647060000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -39,8 +38,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pf0-WQ-otD">
                         <rect key="frame" x="6" y="80" width="124" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="124" id="Dco-4I-NXh"/>
-                            <constraint firstAttribute="height" constant="20" id="i0V-Wv-21s"/>
+                            <constraint firstAttribute="height" constant="20" id="i1s-Tv-mwc"/>
+                            <constraint firstAttribute="width" constant="124" id="sBY-3w-s6c"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.69019607839999997" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -49,8 +48,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejP-JG-cf1">
                         <rect key="frame" x="160" y="80" width="200" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="200" id="FOw-O0-TiN"/>
-                            <constraint firstAttribute="height" constant="25" id="pbB-dy-dtt"/>
+                            <constraint firstAttribute="width" constant="200" id="75c-xe-m4g"/>
+                            <constraint firstAttribute="height" constant="25" id="fzO-bh-Wvg"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.60392156860000001" green="0.60392156860000001" blue="0.60392156860000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -59,8 +58,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2uP-F2-eCH">
                         <rect key="frame" x="160" y="55" width="100" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="3Is-kz-l4C"/>
-                            <constraint firstAttribute="height" constant="20" id="B7O-1a-knt"/>
+                            <constraint firstAttribute="width" constant="100" id="51u-7M-7Yi"/>
+                            <constraint firstAttribute="height" constant="20" id="SCb-dm-y7l"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.60392156862745094" green="0.60392156862745094" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
@@ -69,8 +68,8 @@
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d7Q-Pw-5UT">
                         <rect key="frame" x="160" y="30" width="100" height="25"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="25" id="UO0-S9-1wQ"/>
-                            <constraint firstAttribute="width" constant="100" id="mzf-2g-1yv"/>
+                            <constraint firstAttribute="width" constant="100" id="egB-EU-s87"/>
+                            <constraint firstAttribute="height" constant="25" id="j9a-mA-dGo"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -79,15 +78,15 @@
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Tab_4-21" translatesAutoresizingMaskIntoConstraints="NO" id="fQ4-Gb-C9Y">
                         <rect key="frame" x="289" y="31" width="53.5" height="41"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="41" id="NH2-IW-bwf"/>
-                            <constraint firstAttribute="width" constant="53.5" id="R9e-F0-rUl"/>
+                            <constraint firstAttribute="width" constant="53.5" id="Gvh-OO-9c6"/>
+                            <constraint firstAttribute="height" constant="41" id="JJL-2T-qpn"/>
                         </constraints>
                     </imageView>
                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fP8-yQ-DiY">
                         <rect key="frame" x="262" y="35" width="80" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="80" id="AXo-3A-beo"/>
-                            <constraint firstAttribute="height" constant="30" id="inN-Kx-95P"/>
+                            <constraint firstAttribute="height" constant="30" id="EYY-NE-PHH"/>
+                            <constraint firstAttribute="width" constant="80" id="uD3-Q4-oNM"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <state key="normal" title="立即使用">
@@ -100,22 +99,23 @@
                 </subviews>
                 <color key="backgroundColor" red="0.96862745098039216" green="0.96862745098039216" blue="0.96862745098039216" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="fQ4-Gb-C9Y" secondAttribute="trailing" constant="16.5" id="2pH-Cx-pSh"/>
-                    <constraint firstItem="eZx-TT-fxw" firstAttribute="leading" secondItem="mHw-rn-ZqY" secondAttribute="trailing" constant="-123.5" id="4jq-2p-ASO"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="fP8-yQ-DiY" secondAttribute="trailing" constant="17" id="FVc-Jd-EFA"/>
-                    <constraint firstItem="eZx-TT-fxw" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Lcv-nz-7a2"/>
-                    <constraint firstItem="fP8-yQ-DiY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="MCM-ZT-2Nm"/>
-                    <constraint firstItem="ejP-JG-cf1" firstAttribute="top" secondItem="2uP-F2-eCH" secondAttribute="bottom" constant="5" id="MJX-fO-sUO"/>
-                    <constraint firstAttribute="trailing" secondItem="ejP-JG-cf1" secondAttribute="trailing" constant="15" id="Whc-BX-sU3"/>
-                    <constraint firstItem="fQ4-Gb-C9Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="ZOw-s1-Xr1"/>
-                    <constraint firstItem="2uP-F2-eCH" firstAttribute="top" secondItem="d7Q-Pw-5UT" secondAttribute="bottom" id="gIz-o5-rLO"/>
-                    <constraint firstItem="d7Q-Pw-5UT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="jjz-N1-KbO"/>
-                    <constraint firstItem="pf0-WQ-otD" firstAttribute="top" secondItem="mHw-rn-ZqY" secondAttribute="bottom" id="kNB-vR-ZPL"/>
-                    <constraint firstItem="eZx-TT-fxw" firstAttribute="leading" secondItem="pf0-WQ-otD" secondAttribute="trailing" constant="-123.5" id="kuk-uQ-194"/>
-                    <constraint firstItem="fP8-yQ-DiY" firstAttribute="leading" secondItem="d7Q-Pw-5UT" secondAttribute="trailing" constant="2" id="lMF-bb-qF7"/>
-                    <constraint firstItem="fP8-yQ-DiY" firstAttribute="leading" secondItem="2uP-F2-eCH" secondAttribute="trailing" constant="2" id="mzQ-iX-Sk3"/>
-                    <constraint firstItem="mHw-rn-ZqY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="s14-xk-rUX"/>
-                    <constraint firstItem="eZx-TT-fxw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="vvH-ks-VjB"/>
+                    <constraint firstItem="d7Q-Pw-5UT" firstAttribute="leading" secondItem="mHw-rn-ZqY" secondAttribute="trailing" constant="30" id="4SJ-GM-Ek8"/>
+                    <constraint firstItem="ejP-JG-cf1" firstAttribute="top" secondItem="2uP-F2-eCH" secondAttribute="bottom" constant="5" id="COa-2y-ghN"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fP8-yQ-DiY" secondAttribute="trailing" constant="17" id="Cp8-2c-q2d"/>
+                    <constraint firstItem="ejP-JG-cf1" firstAttribute="leading" secondItem="pf0-WQ-otD" secondAttribute="trailing" constant="30" id="DS9-ac-vhh"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fQ4-Gb-C9Y" secondAttribute="trailing" constant="16.5" id="GQQ-AG-b7T"/>
+                    <constraint firstItem="pf0-WQ-otD" firstAttribute="top" secondItem="mHw-rn-ZqY" secondAttribute="bottom" id="Mgt-KD-R4r"/>
+                    <constraint firstItem="2uP-F2-eCH" firstAttribute="top" secondItem="d7Q-Pw-5UT" secondAttribute="bottom" id="O6i-3A-80A"/>
+                    <constraint firstItem="mHw-rn-ZqY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="UF2-Ej-eCa"/>
+                    <constraint firstItem="fQ4-Gb-C9Y" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="20" id="bHb-A3-aBK"/>
+                    <constraint firstItem="d7Q-Pw-5UT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="19" id="dAg-t5-W5e"/>
+                    <constraint firstItem="eZx-TT-fxw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="fna-jA-vDM"/>
+                    <constraint firstItem="fP8-yQ-DiY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="24" id="kBX-we-kOY"/>
+                    <constraint firstItem="eZx-TT-fxw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6.5" id="kU5-Ed-3Eu"/>
+                    <constraint firstAttribute="trailing" secondItem="eZx-TT-fxw" secondAttribute="trailing" constant="6.5" id="kho-f9-oit"/>
+                    <constraint firstItem="2uP-F2-eCH" firstAttribute="leading" secondItem="mHw-rn-ZqY" secondAttribute="trailing" constant="30" id="lo3-jO-wqd"/>
+                    <constraint firstItem="pf0-WQ-otD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="6" id="uyS-hA-Fot"/>
+                    <constraint firstItem="mHw-rn-ZqY" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="yHg-XE-rZ3"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
